--- a/Projekt3/Mark.html
+++ b/Projekt3/Mark.html
@@ -95,19 +95,51 @@
     <br>
     <div class="row">
       <h1><u>Története</u></h1>
-      <p>A Metallicát 1981-ben alapította a dán származású Lars Ulrich dobos és az énekes-gitáros James Hetfield Los Angelesben. Ulrich újsághirdetést adott fel, miszerint „egy dobos zenészeket keres Tygers of Pan Tang, Diamond Head és Iron Maiden dalok eljátszásához”, erre James Hetfield és Hugh Tanner válaszolt. Az Aerosmith-fanatikus Hetfield korábban olyan amatőr együttesekben fordult meg, mint az Obsession, a Phantom Lord és a Leather Charm. A zenekart hivatalosan 1981 októberében alapították, öt hónappal azután, hogy Ulrich először találkozott Hetfielddel. A „Metallica” nevet egy barát, Ron Quintana javasolta, aki azon gondolkozott, hogy milyen néven indítsa el heavy metal magazinját. Egyik ötlete a Metallica volt. Ulrich Quintanának a Metal Mania nevet javasolta, így magának megtartotta a Metallicát.</p>
+      <p>A Metallicát 1981-ben alapította a dán származású Lars Ulrich dobos és az énekes-gitáros James Hetfield Los
+        Angelesben. Ulrich újsághirdetést adott fel, miszerint „egy dobos zenészeket keres Tygers of Pan Tang, Diamond
+        Head és Iron Maiden dalok eljátszásához”, erre James Hetfield és Hugh Tanner válaszolt. Az Aerosmith-fanatikus
+        Hetfield korábban olyan amatőr együttesekben fordult meg, mint az Obsession, a Phantom Lord és a Leather Charm.
+        A zenekart hivatalosan 1981 októberében alapították, öt hónappal azután, hogy Ulrich először találkozott
+        Hetfielddel. A „Metallica” nevet egy barát, Ron Quintana javasolta, aki azon gondolkozott, hogy milyen néven
+        indítsa el heavy metal magazinját. Egyik ötlete a Metallica volt. Ulrich Quintanának a Metal Mania nevet
+        javasolta, így magának megtartotta a Metallicát.</p>
     </div>
-    <div class="row"> 
-      <p>1982 elején vették fel első saját dalukat, a „Hit the Lights”-ot, az első Metal Massacre válogatáshoz. A dal címét a Diamond Head együttes „Shoot the Lights” dala inspirálta. Brian Slagel (a későbbi Metal Blade kiadó tulajdonosa) válogatásalbumán Ulrich révén szerepelhettek, mivel jó barátja volt a korábban fanzine-szerkesztéssel foglalkozó Slagelnek. A dalban Lloyd Grant volt a szólógitáros, míg a basszusgitáros Ron McGovney lett, aki korábban már játszott együtt Hetfielddel a Leather Charm soraiban. A Metal Massacre 1982. június 14-én jelent meg, ahol tévesen „Mettallica” néven jegyezték fel őket, és olyan zenekarokkal szerepeltek együtt, mint a Cirith Ungol, a Ratt, a Steeler, az Avatar (a későbbi Savatage) és a Malice. A kiadványon Grant és McGovney neve is tévesen szerepelt, mint Mcgouney és Llyod. Mivel szükség volt egy állandó gitárosra, a The Recyclerben egy újsághirdetést adtak fel, amire Dave Mustaine, a Panic zenekar gitárosa jelentkezett. Az együttes első, 1982. március 14-én adott koncertjén (Anaheim – Kalifornia Radio City klub) már Mustaine gitározott Hetfield oldalán. Az első koncertjeiken Diamond Head, Sweet Savage és Savage dalok is a koncertprogram részét képezték. A Metal Massacre válogatás ezt követően Kanadában is megjelent, melyen a Hit the Lights már újravett verzióban, Mustaine előadásában szerepelt. Az első próbatermi felvételek 1982-ben készültek McGovney garázsában, melyből a Ron McGovney's '82 Garage demó született, rajta öt Diamond Head-, egy Sweet Savage- és egy Savage-feldolgozással, valamint két saját számmal („Hit the Lights”, „Jump in the Fire”).</p>
+    <div class="row">
+      <p>1982 elején vették fel első saját dalukat, a „Hit the Lights”-ot, az első Metal Massacre válogatáshoz. A dal
+        címét a Diamond Head együttes „Shoot the Lights” dala inspirálta. Brian Slagel (a későbbi Metal Blade kiadó
+        tulajdonosa) válogatásalbumán Ulrich révén szerepelhettek, mivel jó barátja volt a korábban
+        fanzine-szerkesztéssel foglalkozó Slagelnek. A dalban Lloyd Grant volt a szólógitáros, míg a basszusgitáros Ron
+        McGovney lett, aki korábban már játszott együtt Hetfielddel a Leather Charm soraiban. A Metal Massacre 1982.
+        június 14-én jelent meg, ahol tévesen „Mettallica” néven jegyezték fel őket, és olyan zenekarokkal szerepeltek
+        együtt, mint a Cirith Ungol, a Ratt, a Steeler, az Avatar (a későbbi Savatage) és a Malice. A kiadványon Grant
+        és McGovney neve is tévesen szerepelt, mint Mcgouney és Llyod. Mivel szükség volt egy állandó gitárosra, a The
+        Recyclerben egy újsághirdetést adtak fel, amire Dave Mustaine, a Panic zenekar gitárosa jelentkezett. Az
+        együttes első, 1982. március 14-én adott koncertjén (Anaheim – Kalifornia Radio City klub) már Mustaine
+        gitározott Hetfield oldalán. Az első koncertjeiken Diamond Head, Sweet Savage és Savage dalok is a
+        koncertprogram részét képezték. A Metal Massacre válogatás ezt követően Kanadában is megjelent, melyen a Hit the
+        Lights már újravett verzióban, Mustaine előadásában szerepelt. Az első próbatermi felvételek 1982-ben készültek
+        McGovney garázsában, melyből a Ron McGovney's '82 Garage demó született, rajta öt Diamond Head-, egy Sweet
+        Savage- és egy Savage-feldolgozással, valamint két saját számmal („Hit the Lights”, „Jump in the Fire”).</p>
     </div>
     <br>
     <div class="row">
       <div class="col-6">
-      <img id="banda" src="Kepek/metallica2.jpg" alt="">
+        <img id="banda" src="Kepek/metallica2.jpg" alt="">
       </div>
       <div class="col-6">
-      <p>Ezután Power Metal címmel elkészítettek egy négyszámos demót, amit már a Hetfield által rajzolt, a mai napig használt logó díszített. A demó címét McGovney adta, de a többiek megkérdezése nélkül, és ezen rendesen össze is vesztek Ulrichhal.Hetfield ekkortájt fontolóra vette, hogy felhagy a gitározással az éneklés kedvéért, végül néhány balul sikerült kísérlet után (egy Sammy Dijon nevű énekessel és egy Jeff Warner nevű énekes-gitárossal is dolgoztak) mégiscsak a négyes felállás mellett döntöttek. Ezenkívül a Tygers of Pan Tang énekesét Jess Coxot és az Armored Saint énekesét (később Anthrax) John Busht is próbálták megnyerni, ők azonban elutasították az ajánlatokat. Nemsokára egy újabb teljes értékű demót készítettek No Life 'til Leather címmel, amely címében egyfajta utalás volt a Motörhead 1981-es, klasszikus No Sleep ’til Hammersmith koncertlemezére. A 4 dollár 99 centért árusított kazetta a „Hit the Lights” egy újabb verziója mellett további hat dalt tartalmazott. Azonban McGovney AOR/rádiórockos ízlése zeneileg nem passzolt a többiek közé, ráadásul emberileg sem jött ki Mustaine-nel, így a zenekar McGovney tudta nélkül új embert keresett a basszusgitárosi posztra.</p>
-    </div>
+        <p>Ezután Power Metal címmel elkészítettek egy négyszámos demót, amit már a Hetfield által rajzolt, a mai napig
+          használt logó díszített. A demó címét McGovney adta, de a többiek megkérdezése nélkül, és ezen rendesen össze
+          is vesztek Ulrichhal.Hetfield ekkortájt fontolóra vette, hogy felhagy a gitározással az éneklés kedvéért,
+          végül néhány balul sikerült kísérlet után (egy Sammy Dijon nevű énekessel és egy Jeff Warner nevű
+          énekes-gitárossal is dolgoztak) mégiscsak a négyes felállás mellett döntöttek. Ezenkívül a Tygers of Pan Tang
+          énekesét Jess Coxot és az Armored Saint énekesét (később Anthrax) John Busht is próbálták megnyerni, ők
+          azonban elutasították az ajánlatokat. Nemsokára egy újabb teljes értékű demót készítettek No Life 'til Leather
+          címmel, amely címében egyfajta utalás volt a Motörhead 1981-es, klasszikus No Sleep ’til Hammersmith
+          koncertlemezére. A 4 dollár 99 centért árusított kazetta a „Hit the Lights” egy újabb verziója mellett további
+          hat dalt tartalmazott. Azonban McGovney AOR/rádiórockos ízlése zeneileg nem passzolt a többiek közé, ráadásul
+          emberileg sem jött ki Mustaine-nel, így a zenekar McGovney tudta nélkül új embert keresett a basszusgitárosi
+          posztra.</p>
+      </div>
     </div>
 
   </div>
