--- a/Projekt3/Mark2.html
+++ b/Projekt3/Mark2.html
@@ -41,48 +41,53 @@
 
     <div class="row">
       <div class="col-6">
-      <div class="card" style="width:350px">
-        <img src="Kepek/James_Hetfield.jpg" alt="Card image">
-        <div class="card-body">
-          <h2 class="card-title">James Hetfield</h2>
-          <p class="card-text">gitáros, énekes</p>
+        <div class="card" style="width:350px">
+          <img src="Kepek/James_Hetfield.jpg" alt="Card image">
+          <div class="card-body">
+            <h2 class="card-title">James Hetfield</h2>
+            <p class="card-text">gitáros, énekes</p>
+          </div>
         </div>
       </div>
-      </div>
-    <div class="col-6">
-      <div class="card" style="width:350px">
-        <img src="Kepek/lars_ulrich.jpg" alt="Card image">
-        <div class="card-body">
-          <h2 class="card-title">Lars Ulrich</h2>
-          <p class="card-text">dobos</p>
+      <div class="col-6">
+        <div class="card" style="width:350px">
+          <img src="Kepek/lars_ulrich.jpg" alt="Card image">
+          <div class="card-body">
+            <h2 class="card-title">Lars Ulrich</h2>
+            <p class="card-text">dobos</p>
+          </div>
         </div>
       </div>
     </div>
-    </div>
-    
+
     <br>
     <div class="row">
       <div class="col-6">
-      <div class="card" style="width:350px">
-        <img src="Kepek/kirk_hammet.jpg" alt="Card image">
-        <div class="card-body">
-          <h2 class="card-title">Kirk Hammett</h2>
-          <p class="card-text">szológitáros</p>
+        <div class="card" style="width:350px">
+          <img src="Kepek/kirk_hammet.jpg" alt="Card image">
+          <div class="card-body">
+            <h2 class="card-title">Kirk Hammett</h2>
+            <p class="card-text">szológitáros</p>
+          </div>
         </div>
       </div>
-      </div>
-  <div class="col-6">
-      <div class="card" style="width:350px">
-        <img src="Kepek/Robert_Trujillo.jpg" alt="Card image">
-        <div class="card-body">
-          <h2 class="card-title">Robert Trujillo</h2>
-          <p class="card-text">basszusgitáros</p>
+      <div class="col-6">
+        <div class="card" style="width:350px">
+          <img src="Kepek/Robert_Trujillo.jpg" alt="Card image">
+          <div class="card-body">
+            <h2 class="card-title">Robert Trujillo</h2>
+            <p class="card-text">basszusgitáros</p>
+          </div>
         </div>
       </div>
+      <div>
+        <h1>
+          <a href="Mark3.html">----></a>
+        </h1>
+      </div>
     </div>
-    </div>
-   
-    
+
+
 
 
   </div>
