--- a/Projekt3/Mark3.html
+++ b/Projekt3/Mark3.html
@@ -1,58 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="Mark.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Mark.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <div id="cont" class="container">
-        <h1 class="text-center">Zenei stílus</h1>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Metallica</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">KISS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">AC/DC</a>
-                  </li>           
-                </ul>
-              </div>
-            </div>          
-          </nav>
-          <div class="row">
-            <p>A Metallica zenéjét nagymértékben befolyásolták az 1970-es évekbeli rock-előadók, mint a Black Sabbath, a Led Zeppelin, a Deep Purple, a Judas Priest, a Queen, az AC/DC, a Kiss, az Aerosmith, a Rainbow, a Lynyrd Skynyrd, Ted Nugent és a Scorpions, vagy az 1980-as évekből a Mercyful Fate és a Trouble. Ezenkívül a punk olyan képviselői, mint a Ramones, a Sex Pistols, a The Misfits, a Killing Joke és a GBH szintén befolyással voltak a zenekarra. A legnagyobb hatást viszont a New Wave of British Heavy Metal hullám olyan képviselői gyakorolták rájuk, mint a Venom, a Motörhead, a Diamond Head, a Iron Maiden, a Saxon, az Angel Witch, a Tygers of Pan Tang és a Blitzkrieg. A debütáló Kill ’Em All albumukkal minden korábbi együttesnél gyorsabban, keményebben fogalmaztak, lefektetve ezáltal a thrash metal alapjait. Az albumot nagymértékben befolyásolta a punk gyorsasága és a heavy metal keményebb, epikus hangvétele. Hetfield így nyilatkozott a korai idők irányvonaláról: „Két 'head' kombinációja voltunk kezdetben: Diamond Head és Motörhead. Az epikus jelleg egyértelműen a Diamond Headtől jött, míg az egyszerűség a Motörheadtől”. A lemez szövegei a heavy metal dicsőítéséről, legyőzhetetlenségbe vetett hitükről szólnak. Az album egyik érdekessége az (Anesthesia) Pulling Teeth című basszusgitárszóló, amely akkoriban szokatlan dolognak számított. Az ötletet Eddie Van Halen Eruption című gitárszólója szolgáltatta. A Ride the Lightning, a Master of Puppets és az …And Justice for All című albumok már komoly elrugaszkodást jelentettek a szimpla thrash metaltól. A dalok hosszabbak, komplexebb felépítésűek lettek, több téma és tempóváltással. A zúzós, thrashes riffek mellett a heavy és a speed metal jellegzetességei is nagyobb szerepet kaptak. A kidolgozottabb megközelítés, a nagyarányú zenei fejlődés Cliff Burtonnek volt köszönhető, aki társainál képzettebb muzsikus volt. Burton a dalszerzésből aktívan kivette a részét, és a basszusgitárját is szólisztikusan, virtuóz módon használta. A szövegek terén szintén elrugaszkodtak a korábbi gondolatoktól, történelmi, irodalmi témák, a félelem, addikció, düh, háborúk, társadalomkritikai felhangok váltak a mondanivaló középpontjává.</p>
-          </div>
-            <div class="row">
-                <img id="kep" src="Kepek/cd.jpg" alt="">
-            </div>
-            <div class="row">
-              <p>A Metallica albumon eltávolodtak a korábbi stílustól, a dalok leegyszerűsödtek, slágeresebbé, rockosabbá váltak. A kommersz vonalat erősítette, hogy a korábbi komor, depresszív halálközpontú szövegeket, általánosabb, az élet kérdéseivel foglalkozó sorok váltották fel. Az egyszerűbb, rádiórockos tendencia tovább folytatódott a Load/ReLoad albumokon, a kornak megfelelő alternatív hangvétellel gazdagítva. Ezeken a lemezeken a blues és a hard rock befolyása is jelentősen teret nyert, melynek következtében több dallam és harmónia színesítette az együttes hangzásvilágát. Ekkorra már James Hetfield is kifogástalanul, dallamosan tudott énekelni, míg korábban inkább csak a thrash metalra jellemző módon vokalizált. A keményebb, metálos hangzáshoz a St. Anger albummal tértek vissza, mely egy groove-os, alkalmanként nu metalos modern metal album lett, gitárszólók nélkül. Az albumon újdonság volt még a nyers, csiszolatlan hangzás, gitárok terén pedig drop C hangolást alkalmaztak. A lemez szövegei kábítószer-ellenességről, klausztrofóbiáról, vallási képmutatásról szólnak. A Death Magnetic albummal visszatértek az 1980-as évek stílusához, melyen közel-keleti hatások is felbukkantak.</p>
-            </div>
-            <br>
-            <div class="row">
-                <div class="text-center">
-                  <img id="kep3" src="Kepek/concert.jpg" alt="">
-                </div>
-                <div>
-                  <p>A Metallica zenéjét általában thrash metalként szokás definiálni, színtiszta thrasht azonban sosem játszottak. Stílusuk egyik legfőbb ismérve James Hetfield egyedi, mély tónusú énekhangja. Lars Ulrich dobjátéka és Kirk Hammett gitárstílusa szintén felismerhető, Hetfield feszes ritmusgitárjátéka pedig számos gitárosra volt hatással. A legtöbb kritika általában Hammett és Ulrich teljesítményét szokta érni. Ulrich már a Metallica albumon is leegyszerűsítette stílusát, a Load/ReLoad albumokon pedig már szinte csak 2/4-et üt. A rajongók azonban ennél jobban kifogásolják koncertteljesítményét, ahol rendszeresek a pontatlanságai, melléütései, és a korábbi dobtémáinak leegyszerűsítései. Egyes rajongókat ez főleg annak fényében bosszant, hogy Ulrich dobtémái korábban sem voltak túlbonyolítva. Képességeivel azonban ő maga is tisztában van: „Tény, hogy nem voltam egy Ian Paice vagy egy Neil Peart”. A The Big 4 kapcsán pedig így nyilatkozott: „Biztosan infarktust kapnék, ha a Slayerben kellene dobolnom”.[240] Kirk Hammett gitárost általában az a kritika éri, hogy a Fekete Lemez óta nem ír olyan kidolgozott, dallamos szólókat, mint korábban. Ezt ő maga is elismeri: „Sokan cikiznek azzal, hogy mindig a wah-wah pedál mögé bújom, ha nem jut eszembe semmi, de tényleg ez az igazság (nevet)”</p>
-                </div>
-            </div>
-            
+  <div id="cont" class="container">
+    <h1 class="text-center">Zenei stílus</h1>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;"
+            class="rounded-pill"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="Mark.html">Metallica</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">KISS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri.html">AC/DC</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="row">
+      <p>A Metallica zenéjét nagymértékben befolyásolták az 1970-es évekbeli rock-előadók, mint a Black Sabbath, a Led
+        Zeppelin, a Deep Purple, a Judas Priest, a Queen, az AC/DC, a Kiss, az Aerosmith, a Rainbow, a Lynyrd Skynyrd,
+        Ted Nugent és a Scorpions, vagy az 1980-as évekből a Mercyful Fate és a Trouble. Ezenkívül a punk olyan
+        képviselői, mint a Ramones, a Sex Pistols, a The Misfits, a Killing Joke és a GBH szintén befolyással voltak a
+        zenekarra. A legnagyobb hatást viszont a New Wave of British Heavy Metal hullám olyan képviselői gyakorolták
+        rájuk, mint a Venom, a Motörhead, a Diamond Head, a Iron Maiden, a Saxon, az Angel Witch, a Tygers of Pan Tang
+        és a Blitzkrieg. A debütáló Kill ’Em All albumukkal minden korábbi együttesnél gyorsabban, keményebben
+        fogalmaztak, lefektetve ezáltal a thrash metal alapjait. Az albumot nagymértékben befolyásolta a punk gyorsasága
+        és a heavy metal keményebb, epikus hangvétele. Hetfield így nyilatkozott a korai idők irányvonaláról: „Két
+        'head' kombinációja voltunk kezdetben: Diamond Head és Motörhead. Az epikus jelleg egyértelműen a Diamond
+        Headtől jött, míg az egyszerűség a Motörheadtől”. A lemez szövegei a heavy metal dicsőítéséről,
+        legyőzhetetlenségbe vetett hitükről szólnak. Az album egyik érdekessége az (Anesthesia) Pulling Teeth című
+        basszusgitárszóló, amely akkoriban szokatlan dolognak számított. Az ötletet Eddie Van Halen Eruption című
+        gitárszólója szolgáltatta. A Ride the Lightning, a Master of Puppets és az …And Justice for All című albumok már
+        komoly elrugaszkodást jelentettek a szimpla thrash metaltól. A dalok hosszabbak, komplexebb felépítésűek lettek,
+        több téma és tempóváltással. A zúzós, thrashes riffek mellett a heavy és a speed metal jellegzetességei is
+        nagyobb szerepet kaptak. A kidolgozottabb megközelítés, a nagyarányú zenei fejlődés Cliff Burtonnek volt
+        köszönhető, aki társainál képzettebb muzsikus volt. Burton a dalszerzésből aktívan kivette a részét, és a
+        basszusgitárját is szólisztikusan, virtuóz módon használta. A szövegek terén szintén elrugaszkodtak a korábbi
+        gondolatoktól, történelmi, irodalmi témák, a félelem, addikció, düh, háborúk, társadalomkritikai felhangok
+        váltak a mondanivaló középpontjává.</p>
     </div>
+    <div class="row">
+      <img id="kep" src="Kepek/cd.jpg" alt="">
+    </div>
+    <div class="row">
+      <p>A Metallica albumon eltávolodtak a korábbi stílustól, a dalok leegyszerűsödtek, slágeresebbé, rockosabbá
+        váltak. A kommersz vonalat erősítette, hogy a korábbi komor, depresszív halálközpontú szövegeket, általánosabb,
+        az élet kérdéseivel foglalkozó sorok váltották fel. Az egyszerűbb, rádiórockos tendencia tovább folytatódott a
+        Load/ReLoad albumokon, a kornak megfelelő alternatív hangvétellel gazdagítva. Ezeken a lemezeken a blues és a
+        hard rock befolyása is jelentősen teret nyert, melynek következtében több dallam és harmónia színesítette az
+        együttes hangzásvilágát. Ekkorra már James Hetfield is kifogástalanul, dallamosan tudott énekelni, míg korábban
+        inkább csak a thrash metalra jellemző módon vokalizált. A keményebb, metálos hangzáshoz a St. Anger albummal
+        tértek vissza, mely egy groove-os, alkalmanként nu metalos modern metal album lett, gitárszólók nélkül. Az
+        albumon újdonság volt még a nyers, csiszolatlan hangzás, gitárok terén pedig drop C hangolást alkalmaztak. A
+        lemez szövegei kábítószer-ellenességről, klausztrofóbiáról, vallási képmutatásról szólnak. A Death Magnetic
+        albummal visszatértek az 1980-as évek stílusához, melyen közel-keleti hatások is felbukkantak.</p>
+    </div>
+    <br>
+    <div class="row">
+      <div class="text-center">
+        <img id="kep3" src="Kepek/concert.jpg" alt="">
+      </div>
+      <div>
+        <p>A Metallica zenéjét általában thrash metalként szokás definiálni, színtiszta thrasht azonban sosem
+          játszottak. Stílusuk egyik legfőbb ismérve James Hetfield egyedi, mély tónusú énekhangja. Lars Ulrich
+          dobjátéka és Kirk Hammett gitárstílusa szintén felismerhető, Hetfield feszes ritmusgitárjátéka pedig számos
+          gitárosra volt hatással. A legtöbb kritika általában Hammett és Ulrich teljesítményét szokta érni. Ulrich már
+          a Metallica albumon is leegyszerűsítette stílusát, a Load/ReLoad albumokon pedig már szinte csak 2/4-et üt. A
+          rajongók azonban ennél jobban kifogásolják koncertteljesítményét, ahol rendszeresek a pontatlanságai,
+          melléütései, és a korábbi dobtémáinak leegyszerűsítései. Egyes rajongókat ez főleg annak fényében bosszant,
+          hogy Ulrich dobtémái korábban sem voltak túlbonyolítva. Képességeivel azonban ő maga is tisztában van: „Tény,
+          hogy nem voltam egy Ian Paice vagy egy Neil Peart”. A The Big 4 kapcsán pedig így nyilatkozott: „Biztosan
+          infarktust kapnék, ha a Slayerben kellene dobolnom”.[240] Kirk Hammett gitárost általában az a kritika éri,
+          hogy a Fekete Lemez óta nem ír olyan kidolgozott, dallamos szólókat, mint korábban. Ezt ő maga is elismeri:
+          „Sokan cikiznek azzal, hogy mindig a wah-wah pedál mögé bújom, ha nem jut eszembe semmi, de tényleg ez az
+          igazság (nevet)”</p>
+      </div>
+    </div>
+    <div class="text-center">
+      <h1><a href="Mark4.html">----></a></h1>
+    </div>
+  </div>
 </body>
+
 </html>
