--- a/Projekt3/Mark4.html
+++ b/Projekt3/Mark4.html
@@ -1,41 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="Mark.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Mark.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <div id="cont" class="container">
-        <p class="text-center">Bandák</p>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Metallica</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">KISS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">AC/DC</a>
-                  </li>           
-                </ul>
-              </div>
-            </div>          
-          </nav>
-
-
+  <div id="cont" class="container">
+    <h1 class="text-center">Sikerek, népszerűség</h1>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;"
+            class="rounded-pill"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="Mark.html">Metallica</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">KISS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri.html">AC/DC</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="row">
+      <p>A Metallica tulajdonképpen már a korai demók révén nagy feltűnést keltett. A készülődő első albumukat akkoriban
+        a kiadók érdektelenséggel fogadták. Johnny Zazula a Megaforce kiadó tulajdonosa, viszont megérezte, hogy az
+        együttesben benne van a lehetőség akár egy Led Zeppelin-szintű siker elérésére. A Kill 'Em All lemez így a
+        Megaforce gondozásában jelenhetett meg. Az album nem került fel a listákra, de az undergroundban sikeresnek
+        bizonyult. A Ride the Lightningot már nagy várakozás előzte meg, mely révén ez már sokkal kelendőbbnek
+        bizonyult. Ekkoriban a zeneipar és egyes zenészek nagy része is úgy gondolta, hogy a Metallica durva hangzású,
+        nem popszerű refrénekre építő zenéje nem képes arra, hogy széles sikereket arasson. Amikor 1984-ben a Twisted
+        Sisterrel turnéztak, Dee Snider így nyilatkozott róluk: „Rendes kölykök, de esélyük sincs arra, hogy ezzel a
+        zenével igazán sikeresek legyenek”. A Ride the Lightning európai sikere nyomán azonban az Elektra leszerződtette
+        a zenekart. Az 1986-ban megjelent Master of Puppets az addigi legsikeresebb lemezük lett, az igazi áttörést
+        azonban még nem hozta el. Metallica-dalokat akkoriban egyáltalán nem sugároztak a rádiók és az MTV, helyette a
+        slágeres hard rock/glam csapatok kaptak médiaszereplést. Ezekről az együttesekről megvolt a Metallica sajátos
+        véleménye, a Leper Messiah című dal például utalás volt a „futószalagon gyártott” hollywoodi glamzenekarokra.
+      </p>
     </div>
+    <div class="row">
+      <img src="Kepek/rendezveny.jpg" alt="">
+    </div>
+    <div class="row">
+      <p>A Winger együttessel több alkalommal is összeszólalkoztak a sajtóban, főleg azután mikor Lars Ulrich a Nothing
+        Else Matters klipjében egy Winger-posztert használt dartstábla gyanánt. Az eset után Reb Beach több alkalommal
+        is nyomdafestéket nem tűrő szavakkal ihlette a Metallica gitárosát, Kirk Hammettet.
+        A média támogatása nélkül így a csak a rendszeres turnézásra támaszkodhattak. Korábban az Iron Maiden hasonló
+        recepttel hihetetlen népszerűségre tett szert. Az …And Justice for All kiadása után már a Metallica is csaknem
+        olyan magasra jutott, de hogy ezt túlszárnyalhassák, már kellett a média támogatása. A Fekete Lemez slágeresebb
+        dalai ezt lehetővé is tették, így az 1990-es évek elejére már a legnépszerűbb heavy metal együttessé nőtték ki
+        magukat. Innentől fogva a zenekar rendszeresen látható volt az MTV-n, és a rádiók is műsorukra tűzték dalaikat.
+        A Fekete Lemez 30 milliós eladásával minden idők legsikeresebb metálalbuma lett. A Nielsen SoundScan felmérése
+        szerint az album a kiadása óta eltelt 20 év alatt (1991–2011) a legtöbb példányszámban elkelt kiadvány lett az
+        Egyesült Államokban.</p>
+    </div>
+    <div class="row">
+      <img id="kep4" src="Kepek/nezok.jpg" alt="">
+    </div>
+    <div class="row">
+      <p>Általános vélekedés, hogy a Metallica minden idők egyik legjobb és legnépszerűbb metálzenekara. A VH1 A 20 legnagyobb metálegyüttes listáján az első helyre kerültek.[248] Világszerte több mint 200 millió albumot adtak el, ebből 57 milliót az Egyesült Államokban. A hard rock/metal előadók közül csak az Aerosmith, az AC/DC és a Led Zeppelin adott el több lemezt az USA-ban. Az együttes a hetedik legsikeresebb zenei vállalkozás az amerikai történelemben.
+        Az 1991-ben megjelent Metallica album óta, minden stúdióalbumuk első helyezett lett a Billboard 200-as listáján. 2009-ben a Death Magnetic már az ötödik ilyen albumuk volt, mely révén rekordot döntöttek. Ezt 2009 júniusában megismételte a Dave Matthews Band, mely formációnak szintén öt egymást követő albuma volt listavezető.</p>
+    </div>
+    <div class="row">
+      <div class="text-center">
+        <img id="koncert" src="Kepek/koncert.jpg" alt="">
+      </div>
+    </div>
+
+  </div>
 </body>
+
 </html>
