--- a/Projekt3/Levi2.html
+++ b/Projekt3/Levi2.html
@@ -50,6 +50,10 @@ A KISS többféle irányba is elkalandozott pályafutása során, jellegzetessé
             <img id="idk"src="Kepek/KISS_in_Helsinki_2008,_P1010816.jpg" alt="">
          </div>
         </div>
+        <br>
+        <div class="row text-end">
+          <p><a  href="Levi3.html"><img id="nyil" src="Kepek/orange-arrow.png" alt="ugrás a következő oldalra"></a></p>
+       </div>
 
     </div>
 </body>
