--- a/Projekt3/Index.html
+++ b/Projekt3/Index.html
@@ -1,98 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="slideshow.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="slideshow.css">
+  <link rel="stylesheet" href="Gyuri.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <div id="cont" class="container">
-        <p class="text-center">Bandák</p>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Metallica</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">KISS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">AC/DC</a>
-                  </li>           
-                </ul>
-              </div>
-            </div>          
-          </nav>
-          <br>
-          <div class="slideshow-container">
+  <div id="cont" class="container">
+    <h1 class="text-center">Főoldal</h1>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"><img id="rr"src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;"
+            class="rounded-pill"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="Mark.html">Metallica</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">KISS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri.html">AC/DC</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <br>
+    <div class="slideshow-container">
 
-            <div class="mySlides fade">
-              <div class="numbertext">1 / 3</div>
-              <img id="sld" src="Kepek/metallica.png" style="width:100%">
-              <div class="text"></div>
-            </div>
-  
-            <div class="mySlides fade">
-              <div class="numbertext">2 / 3</div>
-              <img id="sld" src="Kepek/acdc.png" style="width:100%">
-              <div class="text"></div>
-            </div>
-  
-            <div class="mySlides fade">
-              <div class="numbertext">3 / 3</div>
-              <img id="sld" src="Kepek/metallica.png" style="width:100%">
-              <div class="text"></div>
-            </div>
-  
-            <div class="col-3">
-  
-            </div>
-  
-          </div>
-          <br>
-  
-          <div style="text-align:center">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-          </div>
-  
-          <script>
-            let slideIndex = 0;
-            showSlides();
-  
-            function showSlides() {
-              let i;
-              let slides = document.getElementsByClassName("mySlides");
-              let dots = document.getElementsByClassName("dot");
-              for (i = 0; i < slides.length; i++) {
-                slides[i].style.display = "none";
-              }
-              slideIndex++;
-              if (slideIndex > slides.length) { slideIndex = 1 }
-              for (i = 0; i < dots.length; i++) {
-                dots[i].className = dots[i].className.replace(" active", "");
-              }
-              slides[slideIndex - 1].style.display = "block";
-              dots[slideIndex - 1].className += " active";
-              setTimeout(showSlides, 2500);
-            }
-          </script>
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img id="sld" src="Kepek/sl_kiss.webp" style="width:100%">
+        <div class="text"></div>
+      </div>
 
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img id="sld" src="Kepek/sl_acdc.jpg" style="width:100%">
+        <div class="text"></div>
+      </div>
 
+      <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img id="sld" src="Kepek/sl-metallica.jpg" style="width:100%">
+        <div class="text"></div>
+      </div>
 
+      <div class="col-3">
+
+      </div>
 
     </div>
+    <br>
+
+    <div style="text-align:center">
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+
+    <script>
+      let slideIndex = 0;
+      showSlides();
+
+      function showSlides() {
+        let i;
+        let slides = document.getElementsByClassName("mySlides");
+        let dots = document.getElementsByClassName("dot");
+        for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+        }
+        slideIndex++;
+        if (slideIndex > slides.length) { slideIndex = 1 }
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " active";
+        setTimeout(showSlides, 2500);
+      }
+    </script>
+    <br>
+    <br>
+    <div class="container">
+      <div class="row">
+      <div class="col-5">
+      <h2>AC/DC</h2>
+    
+      <div class="card bg-dark" style="width:400px">
+        <img class="card-img-top" src="Kepek/crd-acdc.jpg" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text">Az AC/DC egy ausztrál rockcsapat, amely a hard rock műfaj egyik kiemelkedő úttörője.</p>
+          <a href="Gyuri.html" class="btn btn-primary">Tovább</a>
+        </div>
+      </div>
+      <br>
+      <h2>METALLICA</h2>
+    
+      <div class="card bg-dark" style="width:400px">
+        <img class="card-img-top" src="Kepek/crd-metallica.jpg" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text">A Metallica egy amerikai metal együttes, mely 1981-ben alakult Los Angelesben.</p>
+          <a href="Mark.html" class="btn btn-primary">Tovább</a>
+        </div>
+      </div>
+      <br>
+      <h2>KISS</h2>
+  
+      <div class="card bg-dark" style="width:400px">
+        <img class="card-img-top" src="Kepek/crd_kiss.jpg" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text">A KISS egy amerikai rockegyüttes, amely 1973 januárjában alakult New Yorkban.</p>
+          <a href="Levi.html" class="btn btn-primary">Tovább</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-7">
+      <br>
+      <p id="a">Az AC/DC egy ausztrál rockcsapat, amely a hard rock műfaj egyik kiemelkedő úttörője. Az együttes 1973 decemberében, az ausztráliai Sydney-ben alakult. Albumaikat világszerte elképesztő számban értékesítették, a zenekar első harminc éve alatt hozzávetőleg 200 millió példányban keltek el lemezeik</p>
+      <br>
+      <p id="b">A Metallica egy amerikai metal együttes, mely 1981-ben alakult Los Angelesben. Az utóbbi évtizedek egyik legsikeresebb együttese, az 1980-as/90-es évek meghatározó zenekara. A dán származású Lars Ulrich alapította, egy újsághirdetés révén.</p>
+      <br>
+      <p id="c">A KISS egy amerikai rockegyüttes, amely 1973 januárjában alakult New Yorkban. Könnyen felismerhetők az arcfestésükről és a fellépőruhájukról, amely védjegyükké vált az évek folyamán. Az együttes fénykorát az 1970-es években élte, elsősorban show-szerű koncertjeiknek köszönhetően. A Kiss 24 aranylemezt adott ki, világszerte körülbelül 100 millió albumot adtak el.</p>
+ </div>
+    </div>
+    </div>
+
+
+
+
+
+  </div>
 </body>
+
 </html>
