--- a/Projekt3/Levi2.html
+++ b/Projekt3/Levi2.html
@@ -15,7 +15,7 @@
         <h1 class="text-center">KISS</h1>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="Képek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
+              <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="" style="width:40px;" class="rounded-pill"> </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -45,9 +45,9 @@ A KISS többféle irányba is elkalandozott pályafutása során, jellegzetessé
          </div>
          <div class="col-4">
           <br>
-            <img src="Kepek/150px-KISS_Stockholm_2008_3.jpg" alt="">
+            <img id="img" src="Kepek/150px-KISS_Stockholm_2008_3.jpg" alt="">
             <br>
-            <img id="idk"src="Kepek/KISS_in_Helsinki_2008,_P1010816.jpg" alt="">
+            <img id="idk" src="Kepek/KISS_in_Helsinki_2008,_P1010816.jpg" alt="">
          </div>
         </div>
         <br>
