--- a/Projekt3/Levi4.html
+++ b/Projekt3/Levi4.html
@@ -17,8 +17,8 @@
     <h1 class="text-center">AC/DC</h1>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;"
-            class="rounded-pill"> </a>
+        <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="" style="width:40px;" class="rounded-pill"> </a>
+          
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
