--- a/Projekt3/Mark2.html
+++ b/Projekt3/Mark2.html
@@ -82,7 +82,7 @@
       </div>
       <div>
         <h1>
-          <a href="Mark3.html">----></a>
+          <a href="Mark3.html"><img id="nyil" src="Kepek/orange-arrow.png" alt=""></a>
         </h1>
       </div>
     </div>
