--- a/Projekt3/Gyuri2.html
+++ b/Projekt3/Gyuri2.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Gyuri.css">
   <title>Document</title>
 </head>
 
@@ -88,7 +89,7 @@
         jelent meg Ausztráliában. A High Voltage azonnal sikert aratott. Az album és annak első dala, a Baby Please
         Don't Go márciusban felkerült az ausztrál slágerlistára. Közben a csapat felállása is stabilizálódott, amikor
         januárban Phil Rudd lett a dobos, márciusban pedig Mark Evans a basszista. A bemutatkozó lemezen a legtöbb
-        dalban Tony Currenti dobolt, a kislemezen kiadott Baby Please Don't Go-t azonban még Peter Clack ütötte föl.[5]
+        dalban Tony Currenti dobolt, a kislemezen kiadott Baby Please Don't Go-t azonban még Peter Clack ütötte föl.
 
         Az AC/DC menetelése töretlen volt. Márciusban – történetük során először – televíziós műsorban léptek fel. Az
         ABC tévécsatorna azóta legendássá vált, Countdown című műsora adott lehetőséget Ausztrália majdani
@@ -256,7 +257,10 @@
         2017. november 18-án, hosszú, súlyos betegeskedés (túlélt tüdőrák, szívproblémák, majd végül demencia) után elhunyt Malcolm Young, a zenekar alapító ritmusgitárosa és egykori vezetője.</p>
     </div>
     <br>
-
+    
+    <div class="row text-end">
+      <p><a  href="Gyuri3.html"><img id="nyil" src="Kepek/orange-arrow.png" alt="ugrás a következő oldalra"></a></p>
+   </div>
 
   </div>
 </body>
