--- a/Projekt3/Gyuri3.html
+++ b/Projekt3/Gyuri3.html
@@ -44,7 +44,7 @@
 
           Bár skót származású, Ausztráliában élte le gyerekkorát és itt alapította testvérével, Malcolmmal az AC/DC-t, 1973-ban.
           
-          Bluesos stílusával nagyon sok gitárosra volt hatással. A Rolling Stone magazinban 2003-ban David Fricke által összeállított 100 legnagyobb gitáros listáján a 96. helyre rangsorolták,[1] míg a 2011-ben kiadott Minden idők 100 legnagyobb gitárosa elnevezésű listán a 24. helyet kapta.[2]</p>
+          Bluesos stílusával nagyon sok gitárosra volt hatással. A Rolling Stone magazinban 2003-ban David Fricke által összeállított 100 legnagyobb gitáros listáján a 96. helyre rangsorolták, míg a 2011-ben kiadott Minden idők 100 legnagyobb gitárosa elnevezésű listán a 24. helyet kapta.</p>
       </div>
       <div class="col-4">
         <br>
